[package]
name = "home-web"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
bazuka = "0.2.5"
dashmap = "6.1.0"
gethostname = "1.0.2"
local-ip-address = "0.6.5"
num_cpus = "1.17.0"
rand = "0.9.1"
simple-dns = "0.10.1"
socket2 = "0.5.10"
tokio = { version = "1.45.1", features = ["full"] }
